--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,10 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
-    <item android:id="@+id/on_off"
+
+    <item android:id="@+id/paljeje"
         android:title="ON/OFF"
-        android:menuCategory="secondary"
-        android:showAsAction="ifRoom"
-        android:orderInCategory="1">
-    </item>
+        app:showAsAction="ifRoom"
+       />
 </menu>
