--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,10 +8,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:orientation="vertical"
+    
+
     tools:showIn="@layout/activity_main" tools:context=".MainActivity"
     android:weightSum="1">
 <ListView
-    android:background="#123456"
+    android:background="#B7C3C7"
+    android:foreground="#000000"
     android:id="@+id/listView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
