--- a/app/src/main/res/layout/content_podesavanja.xml
+++ b/app/src/main/res/layout/content_podesavanja.xml
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Unesite Prot"
+        android:text="Unesite Port"
         android:id="@+id/port"
         />
 
