--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,6 +6,7 @@
 
     <item android:id="@+id/paljeje"
         android:title="ON/OFF"
+        android:icon="@drawable/plug42"
         app:showAsAction="ifRoom"
        />
 </menu>
