--- a/app/src/main/res/values-en/strings-en.xml
+++ b/app/src/main/res/values-en/strings-en.xml
@@ -1,11 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Менаџер фајлова</string>
-    <string name="action_settings">Подешавања</string>
-    <string name="title_activity_settings">Подешавања</string>
-    <string name="podesavanjeIPadresa">Унесите адресу сервера</string>
-    <string name="podesavanjePort">Унесите порт</string>
-    <string name="dugmeSacuvaj">Сачувај</string>
-    <string name="ONOFF"></string>
+    <string name="app_name">File manager</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_settings">Settings</string>
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
